--- a/WinTun/WinTun.csproj
+++ b/WinTun/WinTun.csproj
@@ -8,10 +8,11 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <PackageId>Unofficial.WinTun</PackageId>
         <Authors>DWVoid</Authors>
-        <Version>0.14.1.2</Version>
+        <Version>0.14.1.3</Version>
         <Description>An unofficial binding of WinTun</Description>
         <PackageProjectUrl>https://github.com/DWVoid/Unofficial.WinTun</PackageProjectUrl>
         <RepositoryUrl>https://github.com/DWVoid/Unofficial.WinTun</RepositoryUrl>
+        <AssemblyName>Unofficial.WinTun</AssemblyName>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
